Prevented radio buttons wrapping away from labels.
Resolves issue #107.

--- a/Dendrite/war/css/2014-09-04-0/style.css
+++ b/Dendrite/war/css/2014-09-04-0/style.css
@@ -375,6 +375,18 @@ a:hover {
 	left: -9999px;
 }
 
+label {
+    white-space: nowrap;
+}
+
+label > span {
+	white-space: normal;
+}
+
+label > input[type=radio] {
+	vertical-align: middle;
+}
+
 input[type=radio]:checked+label>img {
 	background-color: #333;
 	border: 4px solid #333;
